<resources>
    <string name="app_name">SecretTalk</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_empty_input">Input may not empty!</string>
    <string name="error_term_agreement">You cant register if agreement is not accepted</string>
    <string name="error_account_creation_failed">Failed to create account</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="button_sign_in_text">Sign In</string>
    <string name="dont_have_account_text">Don\'t have an account? Sign Up</string>
    <string name="button_here_text">here</string>
    <string name="create_account_header_text">Create Your Account :</string>
    <string name="input_name_hint">Name</string>
    <string name="terms_and_issue_text">Accept issue and terms</string>
    <string name="button_create_account_text">Create Account</string>
    <string name="toolbar_registration_title_text">Create User</string>
    <string name="default_text">default</string>
    <string name="error_password_too_short">Password is to short!</string>
    <string name="toolbar_main_title_text">Secret Talk</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="manage_your_account_text">Manage Your Account</string>
    <string name="display_name_text">Display Name</string>
    <string name="tell_more_about_you_text">Tell more about you</string>
    <string name="button_save_change_text">Save Change</string>
    <string name="toolbar_title_manage_account_text">Manage Account</string>
    <string name="my_profile_text">My Profile</string>
    <string name="my_received_friend_request_text">Friend request received</string>
    <string name="my_friends_text">Friends</string>
</resources>
