<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.training.leos.secrettalk.ui.register.RegistrationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="@dimen/size_16dp"
        android:text="@string/create_account_header_text"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp">

        <EditText
            android:id="@+id/edt_regist_act_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp">

        <AutoCompleteTextView
            android:id="@+id/edt_regist_act_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp"
        android:paddingTop="@dimen/_8sdp">

        <EditText
            android:id="@+id/edt_regist_act_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp">

        <CheckBox
            android:id="@+id/cb_regist_act_term_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/terms_and_issue_text"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_regist_act_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/size_16dp"
        android:backgroundTint="@color/primary_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/button_create_account_text" />

</LinearLayout>
