<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.training.leos.secrettalk.ui.manageAccount.ManageAccountActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_manage_account_head_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abl_manage"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="@dimen/_8sdp"
        android:text="@string/manage_your_account_text"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_manage_account_head_title"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp"
        android:paddingTop="@dimen/size_8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8sdp"
            android:text="@string/display_name_text" />

        <EditText
            android:id="@+id/edt_manage_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxEms="25"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="200"
            android:maxLines="4"
            android:paddingTop="@dimen/size_16dp"
            android:text="@string/tell_more_about_you_text" />

        <EditText
            android:id="@+id/edt_manage_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:maxEms="20"
            android:maxLength="250" />

        <Button
            android:id="@+id/btn_manage_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/size_8dp"
            android:backgroundTint="@color/primary_light"
            android:paddingLeft="@dimen/size_32dp"
            android:paddingRight="@dimen/size_32dp"
            android:text="@string/button_save_change_text" />
    </LinearLayout>
</RelativeLayout>
